# so-lab1

./: .gitignore  CMakeLists.txt  contactlib.c  contactlib.h  main.c  optimization-test-runner.sh  sample1000.csv  test-runner.sh
lib/: contact.c
raports/: coredump-contactbook-bug  gdb.txt
src/: main.c
